@@ -73,8 +73,8 @@
           if (CKEDITOR.instances[instance].mode == 'wysiwyg' && typeof CKEDITOR.instances[instance].document !== "undefined") {
             // @TODO - Handle items with no replacements.
             $('.wysiwyg_fields-placeholder', CKEDITOR.instances[instance].document.$.body).each(function() {
-              replacement = Drupal.settings.wysiwygFields.fields[$(this).parent().attr('wf_field')].replacements[$(this).parent().attr('wf_deltas')][$(this).parent().attr('wf_formatter')];
-              Drupal.wysiwygFields.wysiwyg.ckeditor.wysiwygIsNode($(this).parent().get(0));
+              replacement = Drupal.settings.wysiwygFields.fields[$(this).attr('wf_field')].replacements[$(this).attr('wf_deltas')][$(this).attr('wf_formatter')];
+              Drupal.wysiwygFields.wysiwyg.ckeditor.wysiwygIsNode(this);
 
               // This is required to slow down this function so that the insert
               // doesn't get fired to early. It is hacky and needs fixing.
